# camera_pose_estimation_project

./: starbot.scene
aruco_transform/: package.xml  setup.cfg  setup.py
aruco_transform/aruco_transform/: aruco_detector.py  real_camera_pose.py  sim_camera_cal.py  sim_camera_compressed_pose.py  sim_camera_pose.py
aruco_transform/launch/: D415_camera_tf.launch.py  aruco.launch.py  real_camera.launch.py  sim_camera.launch.py  sim_camera_cal.launch.py  sim_camera_compressed.launch.py
cupholder_detector/: CMakeLists.txt  package.xml
cupholder_detector/src/: cupholder_detector.cpp  cupholder_detector_real.cpp
tf_web_bridge/: CMakeLists.txt  package.xml
tf_web_bridge/launch/: web_bridge.launch.py
tf_web_bridge/src/: tf_web_bridge.cpp  web_action_bridge.cpp
universal_robot_ros2/real_starbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
universal_robot_ros2/real_starbot_moveit_config/config/: joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  name.srdf  ros2_controllers.yaml
universal_robot_ros2/real_starbot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
universal_robot_ros2/rg2_gripper_description/urdf/: rg2_gripper.urdf.xacro
universal_robot_ros2/starbot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
universal_robot_ros2/starbot_moveit_config/config/: kinematics.yaml  servo.yaml
universal_robot_ros2/starbot_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo_test.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
universal_robot_ros2/the_construct_office_gazebo/worlds/: starbots_complete.world
ur_action_servers/: CMakeLists.txt  package.xml
ur_action_servers/action/: ArmControl.action  CameraMove.action  Rg2RelativeMove.action
ur_action_servers/launch/: arm_and_camera_servers.launch.py  camera_frame_server.launch.py  real_arm_and_camera_servers.launch.py
ur_action_servers/src/: arm_control_action_server.cpp  camera_frame_cartesian_server.cpp  camera_frame_cartesian_server_sim.cpp  real_arm_control_action_server.cpp  real_camera_calibration.cpp  real_depth_calibration.cpp  sim_camera_calibration.cpp
ur_transform/launch/: initial_position.launch.py
