<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_web_bridge</name>
  <version>0.1.0</version>
  <description>Web bridge for TF, robot description, and action servers</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>ur_action_servers</depend>

  <!-- For nlohmann_json -->
  <build_depend>nlohmann-json-dev</build_depend>
  <exec_depend>nlohmann-json-dev</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
