<?xml version="1.0"?>
<package format="3">
  <name>ur_action_servers</name>
  <version>0.0.0</version>
  <description>Action servers for controlling UR robot arm and gripper</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>action_msgs</depend>
  <depend>builtin_interfaces</depend>
  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_eigen</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>moveit_core</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


